--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,183 +1,131 @@
-header{
-    font-family: Georgia, 'Times New Roman', Times, serif;
 
-}
 body{
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     background-image: url("../images/light-grey-terrazzo.png");
-    background-position: center;
-    background-repeat: repeat;
-    background-size: cover;
-    height: -webkit-fill-available;
+
 }
-.name{
-    font-size: 34px;
-    font-family: 'Times New Roman', Times, serif;
-    vertical-align: -webkit-baseline-middle;
-}
-.space{
-    line-height: 1.8;
-    padding: 5px;
-    opacity: .75;
-    font-size: 18px;
-    margin: 0;
-}
-.about-me{
-    font-family: 'Times New Roman', Times, serif;
+h1,h2,h3{
+    font-family: 'Georgia', 'Times New Roman', Times, serif;
+    font-weight: 700;
     color: #4aaaa5;
-    font-size: 28px;
-    border-color: 
 }
+h1,h2,h3,p{
+    margin-bottom: 20px;
+}
+p{
+    color: #777777;
+    font-size: 20px;
+    line-height: 1.8;
+}
+h1{
+    font-size: 30px;
+    line-height: 49px;
+    border-bottom: 3px;
+}
+p:last-child{
+    margin-bottom: 0;
+}
+h2, h3{
+    font-size: 22px;
+}
+nav a{
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    line-height: 18px;
+    color: #777777;
+}
+nav a:first-child{
+    border-left: none;
+}
+#all-image{
+    width: 250px;
+    height: auto;
+    margin-right: 25px;
+}
+#image-container{
+    width: 274px;
+    padding: 0;
+    overflow: auto;
+}
+#image-container:nth-child(even){
+    margin-right: 70px;
+}
+#image-container:nth-child(odd){
+    margin-left: 30px;
+}
+#image-container img{
+    width: 100%;
+    border: 0 none;
+}
+#image-container h3{
+    bottom: 10px;
+    background-color: #4aaaa5;
+    color: #ffffff;
+    font-weight: 300;
+    border-bottom: 0;
+    margin-bottom: 0;
+    padding: 15px;
+}
+#header{
+    width: 100%;
+    overflow: auto;
+    background-color: #ffffff;
+    font-family: 'Georgia', 'Times New Roman', Times, serif;
+    border-color: #777777;
+    border-width: 2px;
+
+}
+#name{
+    height: 90px;
+    width: 250px;
+    font-size: 26px;
+    font-weight: 700;
+    text-decoration: none;
+    background: #4aaaa5;
+    text-align: center;
+    color: white;
+    height: auto;
+    line-height: 45px;
+    width: -webkit-fill-available;
+    
+}
+#nav-items{
+    margin-top: 25px;
+}
+#main-section{
+background-color: #ffffff;
+
+}
+
 .copyright{
     font-weight: lighter;
     color: white;
     font-size: 8px;
 }
-.footer{
+#footer{
     border-top: #4aaaa5;
+    background-color: #777777;
     border-top-width: 5px;
     border-style: solid;
-}
-.nav-color{
-        color: #777777;
-}
-/* h2{
-    font-family: 'Times New Roman', Times, serif;
-    color: #4aaaa5;
-    font-size: 28px;
-    margin: 0;
-    margin-bottom: 20px;
-    padding-bottom: 20px;
-    padding-top: 0;
-    padding-left: 0;
-    border-top-width: 0px;
-    border-left-width: 0px;
-    border-right-width: 0px;
-    border-bottom-color: #cccccc;
-    border-bottom-width: 2px;
-    border-style: solid;
-}
-div{
-    color: #777777;
-}
-nav{
-    position: relative;
-    top: 0;
-    width: 960px;
-    height: 80px;
-    margin: auto;  
-}
-
-a{
-    text-decoration: none;
-    color: #777777;
-    opacity: .50;
-}
-#your_name{
-    position: relative;
-    float: left;
-    font-size: 20px;
-    background-color: #4aaaa5;
-    color: white;
-    width: 250px;
     height: 90px;
-    text-align: center;
-    top: 0;
 }
-#top_bar{
-    position: fixed;
-    float: left;
-    font-size: 18px;
-    display: block;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height:90px;
-    background-color: #ffffff;
-    border-width: 0;
-    border-bottom-color: #cccccc;
-    border-bottom-width: 2px;
-    border-style: solid;
-}
-
-.nav-list{
+input[type=text],
+input[typ=email],
+textarea{
     color: #777777;
-    position: relative;
-    float: right;
-    height: 90;
+    border: 1px solid #ddd;
 }
-#about{
-    position: inherit;
-    top: 25px;
-    padding-right: 10px;
-  
-}
-#portfolio{
-    position: inherit;
-    padding-left: 14px;
-    padding-right: 14px;
-    top: 25px;
-    border-width: 0;
-    border-right-width: 1px;
-    border-left-width: 1px;
-    border-color: #cccccc;
-    border-style: solid;
-}
-#contact{
-    position: inherit;
-    padding-left: 14px;
-    top: 25px;
-   
-}
-#container{
-    background-image: url("/Users/phillipgrider/Desktop/Bootcamp/02-Homework/Basic-Portfolio/assets/images/light-grey-terrazzo.png");
-    overflow: -webkit-paged-x;
-    width: -webkit-fill-available;
-}
-
-#small_box{
-    position: relative;
-    top: 115px;
-    background-color: #ffffff;
-    margin: auto;
-    width: 918px;
-    border-top-width: 1px;
-    border-left-width: 1px;
-    border-right-width: 1px;
-    border-bottom-width: 1px;
-    border-color:#dddddd;
-    border-style: solid;
-    padding: 20px;
-}
-#image{
-    float: left;
-    width: 200px;
-    height: 150px;
-    margin: 20px;
-    margin-top: 15px;
-}
-
-footer{
-    overflow: hidden;
-    clear: both;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background-color: #666666;
-    height: 60px;
-    text-align:center;
-
-}
-#footer_box{
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 5px;
+button[type=submit]{
     background-color: #4aaaa5;
+    background-origin: 0 none;
+    color: #fff;
+    font-size: 18px;
+    padding: 10px 30px;
+    cursor: pointer;
+}  
+#name{
+    font-size: 26px;
+    line-height: 50px;
 }
-
- */
-
+.nav{
+    display: none;
+}
